# kmscon

./: .gitignore  COPYING  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  libeloop.pc.in
doc/: vte.txt
docs/: getty@.service  kmscon.service  kmscon.sh  kmscon@.service  kmsconvt@.service  pixman.txt  unicode-test.txt
docs/man/: kmscon.xml
docs/pc/: libtsm.pc.in  libuterm.pc.in  libuvt.pc.in
docs/reference/: Makefile.am  kmscon-docs.sgml
docs/sym/: libeloop.sym  libtsm.sym  libuterm.sym  libuvt.sym
fblog/: 0001-fblog-new-framebuffer-kernel-log-dummy-driver.patch  0002-fblog-implement-buffer-management.patch  0003-fblog-register-framebuffer-objects.patch  0004-fblog-implement-fblog_redraw.patch  0005-fblog-add-framebuffer-helpers.patch  0006-fblog-allow-enabling-disabling-fblog-on-runtime.patch  0007-fblog-forward-kernel-log-messages-to-all-framebuffer.patch  0008-fblog-react-on-framebuffer-events.patch  0009-fblog-register-all-handlers-on-module-init.patch  0010-fblog-add-activate-module-parameter.patch
scripts/: kmscon.in
src/: conf.c  conf.h  console.c  console.h  console_cell.c  console_char.c  eloop.c  eloop.h  font.c  font.h  font_8x16.c  font_freetype.c  font_freetype2.c  font_pango.c  font_unifont.c  font_unifont_data.hex  genshader.c  genshader.c.in  genunifont.c  genversion.sh  gl.h  gl_math.c  gl_shader.c  input-private.h  input-xkb.c  input.c  input.h  input_xkb.c  input_xkb.h  kbd.h  kbd_dumb.c  kbd_xkb.c  kmscon_cdev.c  kmscon_cdev.h  kmscon_compositor.c  kmscon_compositor.h  kmscon_conf.c  kmscon_conf.h  kmscon_dummy.c  kmscon_dummy.h  (+153 more)
tests/: test_buffer.c  test_console.c  test_include.h  test_input.c  test_key.c  test_output.c  test_terminal.c  test_vt.c
tools/: fakevt.c
