#
# Kmscon - Global Makefile
# Copyright (c) 2012-2013 David Herrmann <dh.herrmann@googlemail.com>
#

#
# Global Configurations and Initializations
#

ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
AM_MAKEFLAGS = --no-print-directory
AUTOMAKE_OPTIONS = color-tests
AM_DISTCHECK_CONFIGURE_FLAGS = --enable-all

SUBDIRS = .

.DELETE_ON_ERROR:

include_HEADERS =
EXTRA_DIST = \
	README \
	COPYING \
	NEWS \
	docs/kmscon.service \
	docs/kmsconvt@.service
CLEANFILES =
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA =
MANPAGES =
MANPAGES_ALIASES =
TPHONY =

bin_PROGRAMS =
check_PROGRAMS =
noinst_PROGRAMS =
lib_LTLIBRARIES =
noinst_LTLIBRARIES =

moduledir = $(libdir)/kmscon
module_LTLIBRARIES =

#
# Default CFlags
# Make all files include "config.h" by default. This shouldn't cause any
# problems and we cannot forget to include it anymore.
#
# Also make the linker discard all unused symbols.
#
# When compiling in debug mode, we enable debug symbols so debugging with gdb
# is easier. If optimizations are disabled, we pass -O0 to the compiler.
# Otherwise, we use standard optimizations -O2.
#

AM_CFLAGS = \
	-Wall \
	-pipe \
	-fno-common \
	-ffast-math \
	-fdiagnostics-show-option \
	-fno-strict-aliasing \
	-fvisibility=hidden \
	-ffunction-sections \
	-fdata-sections \
	-fstack-protector
AM_CPPFLAGS = \
	-DBUILD_MODULE_DIR='"$(moduledir)"' \
	-include $(top_builddir)/config.h \
	-I $(srcdir)/src
AM_LDFLAGS = \
	-Wl,--as-needed \
	-Wl,--gc-sections \
	-Wl,-z,relro \
	-Wl,-z,now

if BUILD_ENABLE_DEBUG
AM_CFLAGS += -g
endif

if BUILD_ENABLE_OPTIMIZATIONS
AM_CFLAGS += -O2
else
AM_CFLAGS += -O0
endif

#
# GIT-HEAD helper
# The file ./src/shl_githead.c contains a constant "shl_git_head" which is
# defined to the string returned by "git describe". We need to adjust this
# string for every build and correctly rebuild any sources that depend on it.
# Therefore, you should use this file rarely as it causes rebuilds on every
# git-commit.
#
# We have a helper-script ./src/genversion.sh that takes as argument the source
# file and creates it if necessary. It updates it only if the new git-describe
# string is different to the old one. So the file is only modified on changes.
# Hence, we can use it as normal dependency in this Makefile.
# However, we need to run this script on _every_ "make" invocation before any
# recipy is executed. To achieve this, we use $(shell ...) and assign it to a
# "simply expanded" variable (:=) so the shell command is executed on
# variable-declaration and not during expansion.
#
# Note that we must not clean ./src/shl_githead.c ever! If we would, a
# distribution tarball might delete that file and have no way to recreate it.
# We could delete it on something like "make maintainerclean", but then again,
# it seems unnecessary so lets simply not clean it at all.
#
# If the helper-script is executed in a directory that is not a git-repository
# (like a distribution tarball) and shl_githead.c exists, then it does nothing
# as it expects shl_githead.c to be correctly written by "make dist".
# However, if shl_githead.c does not exist, it will print a warning and write
# an unknown random git-revision.
# This guarantees, that shl_githead.c is always present and has the most correct
# value that we can get under any conditions.
#
# The $(emptyvariable) expansion below is used for broken $(shell ...)
# syntax-highlighting algorithms in many existing editors.
#

EXTRA_DIST += src/genversion.sh
GITHEAD:=$(shell $(emptyvariable)"$(srcdir)/src/genversion.sh" "$(srcdir)/src/shl_githead.c")

#
# Binary File Compiler
# This target gets as input a binary file *.bin and produces an ELF/etc. output
# object file *.bin.o and the corresponding libtool file *.bin.lo.
# Note that we fake the libtool object files as there is no way to make libtool
# create it. The comments in the .lo file are mandatory so don't remove them!
#

CLEANFILES += src/*.bin.lo src/*.bin.o

src/%.bin.lo: src/%.bin
	$(AM_V_GEN)$(LD) -r -o "src/$*.bin.o" -z noexecstack --format=binary "$<"
	$(AM_V_at)$(OBJCOPY) --rename-section .data=.rodata,alloc,load,readonly,data,contents "src/$*.bin.o"
	$(AM_V_at)echo "# $@ - a libtool object file" >"$@"
	$(AM_V_at)echo "# Generated by $(shell $(LIBTOOL) --version | head -n 1)" >>"$@"
	$(AM_V_at)echo "#" >>"$@"
	$(AM_V_at)echo "# Please DO NOT delete this file!" >>"$@"
	$(AM_V_at)echo "# It is necessary for linking the library." >>"$@"
	$(AM_V_at)echo >>"$@"
	$(AM_V_at)echo "# Name of the PIC object." >>"$@"
	$(AM_V_at)echo "pic_object='$*.bin.o'" >>"$@"
	$(AM_V_at)echo >>"$@"
	$(AM_V_at)echo "# Name of the non-PIC object" >>"$@"
	$(AM_V_at)echo "non_pic_object='$*.bin.o'" >>"$@"
	$(AM_V_at)echo >>"$@"

#
# Shader Converter
# We use a few built-in shader files. To reduce memory-consumption, this helper
# removes useless lines from the shaders before they are compiled into an object
# file.
#
# Following regexp are used to remove characters/lines:
#  ^/*.*$     Start of multi-line comment
#  ^ *.*$     Multi-line comment body
#  ^[ \t]*    Indentation whitespace
#  [\r\n]     Newlines
#

CLEANFILES += src/*.vert.bin src/*.frag.bin
SHADER_SED = -e 's/^\/\*.*$$//' -e 's/^ \*.*$$//' -e 's/^[ \t]*//'
SHADER_TR = -d "\r\n"

src/%.vert.bin: $(top_srcdir)/src/%.vert
	$(AM_V_at)$(SED) $(SHADER_SED) "$<" | tr $(SHADER_TR) >"$@"

src/%.frag.bin: $(top_srcdir)/src/%.frag
	$(AM_V_at)$(SED) $(SHADER_SED) "$<" | tr $(SHADER_TR) >"$@"

#
# XKB Fallback Converter
# We use a static built-in XKB fallback keymap. To avoid huge memory consumption
# we remove useless lines/characters first.
# We also append an ASCII 0 character so it can be used as regular C-string.
#
# Following regexp are used to remove characters/lines:
#   *= *           Whitespace around assignments
#   *, *           Whitespace around commatas
#   *[][{}()] *    Whitespace around braces
#  ^[ \t]*         Indentation whitespace
#  [\r\n]          Newlines
#

CLEANFILES += src/*.xkb.bin
XKB_SED = -e 's/^[ \t]*//' -e 's/ *\([,=]\) */\1/g' -e 's/ *\([][{}()]\) */\1/g'
XKB_TR = -d "\r\n"

src/%.xkb.bin: $(top_srcdir)/src/%.xkb
	$(AM_V_at)$(SED) $(XKB_SED) "$<" | tr $(XKB_TR) >"$@"
	$(AM_V_at)echo -ne "\x00" >>"$@"

#
# SHL - Static Helper Library
# The SHL subsystem contains several small code pieces used all over kmscon and
# other applications.
#

noinst_LTLIBRARIES += libshl.la

libshl_la_SOURCES = \
	src/shl_githead.h \
	src/shl_githead.c \
	src/shl_dlist.h \
	src/shl_array.h \
	src/shl_hashtable.h \
	external/htable.h \
	external/htable.c \
	src/shl_ring.h \
	src/shl_timer.h \
	src/shl_llog.h \
	src/shl_log.h \
	src/shl_log.c \
	src/shl_hook.h \
	src/shl_misc.h \
	src/shl_register.h \
	src/shl_flagset.h \
	src/shl_gl.h \
	src/shl_gl_math.c
libshl_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(XKBCOMMON_CFLAGS) \
	-pthread
libshl_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	-pthread
libshl_la_LIBADD = \
	$(AM_LIBADD) \
	$(XKBCOMMON_LIBS)

if BUILD_HAVE_GLES2
libshl_la_SOURCES += src/shl_gl_shader.c
libshl_la_CPPFLAGS += $(GLES2_CFLAGS)
libshl_la_LIBADD += $(GLES2_LIBS)
endif

#
# libeloop
# This library contains the whole event-loop implementation of kmscon. It is
# compiled into a separate object to allow using it in several other programs.
#

noinst_LTLIBRARIES += libeloop.la

libeloop_la_SOURCES = \
	src/eloop.h \
	src/eloop.c

libeloop_la_LIBADD = libshl.la
libeloop_la_CPPFLAGS = $(AM_CPPFLAGS)
libeloop_la_LDFLAGS = $(AM_LDFLAGS)

#
# libuterm
# The uterm library provides helpers to create terminals in user-space. They
# are not limited to text-based terminals but rather provide graphics contexts
# so arbitrary output can be displayed. Additionally, they provide VT
# abstractions and an input layer
#

noinst_LTLIBRARIES += libuterm.la

libuterm_la_SOURCES = \
	src/uterm_input.h \
	src/uterm_monitor.h \
	src/uterm_video.h \
	src/uterm_vt.h \
	src/uterm_input_internal.h \
	src/uterm_video_internal.h \
	src/uterm_systemd_internal.h \
	src/uterm_video.c \
	src/uterm_monitor.c \
	src/uterm_vt.c \
	src/uterm_input.c \
	src/uterm_input_uxkb.c

nodist_libuterm_la_SOURCES =

libuterm_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(UDEV_CFLAGS) \
	$(XKBCOMMON_CFLAGS)
libuterm_la_LIBADD = \
	$(UDEV_LIBS) \
	$(XKBCOMMON_LIBS) \
	libeloop.la \
	libshl.la \
	src/uterm_input_fallback.xkb.bin.lo
libuterm_la_LDFLAGS = \
	$(AM_LDFLAGS)

if BUILD_ENABLE_MULTI_SEAT
libuterm_la_SOURCES += src/uterm_systemd.c
libuterm_la_CPPFLAGS += $(SYSTEMD_CFLAGS)
libuterm_la_LIBADD += $(SYSTEMD_LIBS)
endif

if BUILD_ENABLE_VIDEO_FBDEV
libuterm_la_SOURCES += \
	src/uterm_fbdev_internal.h \
	src/uterm_fbdev_video.c \
	src/uterm_fbdev_render.c
endif

if BUILD_ENABLE_VIDEO_DRM2D
libuterm_la_SOURCES += \
	src/uterm_drm2d_internal.h \
	src/uterm_drm2d_video.c \
	src/uterm_drm2d_render.c
libuterm_la_CPPFLAGS += $(DRM_CFLAGS)
libuterm_la_LIBADD += $(DRM_LIBS)
endif

if BUILD_ENABLE_VIDEO_DRM3D
libuterm_la_SOURCES += \
	src/uterm_drm3d_internal.h \
	src/uterm_drm3d_video.c \
	src/uterm_drm3d_render.c
libuterm_la_CPPFLAGS += \
	$(DRM_CFLAGS) \
	$(EGL_CFLAGS) \
	$(GBM_CFLAGS) \
	$(GLES2_CFLAGS)
libuterm_la_LIBADD += \
	$(DRM_LIBS) \
	$(EGL_LIBS) \
	$(GBM_LIBS) \
	$(GLES2_LIBS) \
	src/uterm_drm3d_blend.vert.bin.lo \
	src/uterm_drm3d_blend.frag.bin.lo \
	src/uterm_drm3d_blit.vert.bin.lo \
	src/uterm_drm3d_blit.frag.bin.lo \
	src/uterm_drm3d_fill.vert.bin.lo \
	src/uterm_drm3d_fill.frag.bin.lo
endif

# add shared sources only once
UTERM_DRM_SHARED_SRC = \
	src/uterm_drm_shared_internal.h \
	src/uterm_drm_shared.c
if BUILD_ENABLE_VIDEO_DRM2D
libuterm_la_SOURCES += $(UTERM_DRM_SHARED_SRC)
else
if BUILD_ENABLE_VIDEO_DRM3D
libuterm_la_SOURCES += $(UTERM_DRM_SHARED_SRC)
endif
endif

#
# Unifont Generator
# This generates the unifont sources from raw hex-encoded font data.
#

UNIFONT = $(top_srcdir)/src/font_unifont_data.hex
UNIFONT_BIN = src/font_unifont_data.bin
UNIFONT_LT = src/font_unifont_data.bin.lo

EXTRA_DIST += $(UNIFONT)
CLEANFILES += $(UNIFONT_BIN)
genunifont_SOURCES = src/genunifont.c

genunifont$(BUILD_EXEEXT) $(genunifont_OBJECTS): CC = $(CC_FOR_BUILD)
genunifont$(BUILD_EXEEXT) $(genunifont_OBJECTS): CFLAGS = $(CFLAGS_FOR_BUILD)
genunifont$(BUILD_EXEEXT): LDFLAGS = $(LDFLAGS_FOR_BUILD)

$(UNIFONT_BIN): $(UNIFONT) genunifont$(BUILD_EXEEXT)
	$(AM_V_GEN)./genunifont$(BUILD_EXEEXT) $(UNIFONT_BIN) $(UNIFONT)

#
# Kmscon Modules
#

if BUILD_ENABLE_FONT_UNIFONT
module_LTLIBRARIES += mod-unifont.la
noinst_PROGRAMS += genunifont
endif

mod_unifont_la_SOURCES = \
	src/kmscon_module_interface.h \
	src/font_unifont.c \
	src/kmscon_mod_unifont.c
mod_unifont_la_LIBADD = \
	$(UNIFONT_LT) \
	libshl.la
mod_unifont_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	-module \
	-avoid-version

if BUILD_ENABLE_FONT_PANGO
module_LTLIBRARIES += mod-pango.la
endif

mod_pango_la_SOURCES = \
	src/kmscon_module_interface.h \
	src/font_pango.c \
	src/kmscon_mod_pango.c
mod_pango_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(PANGO_CFLAGS) \
	$(TSM_CFLAGS)
mod_pango_la_LIBADD = \
	$(PANGO_LIBS) \
	$(TSM_LIBS) \
	-lpthread \
	libshl.la
mod_pango_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	-module \
	-avoid-version

if BUILD_ENABLE_RENDERER_BBULK
module_LTLIBRARIES += mod-bbulk.la
endif

mod_bbulk_la_SOURCES = \
	src/kmscon_module_interface.h \
	src/text_bbulk.c \
	src/kmscon_mod_bbulk.c
mod_bbulk_la_LIBADD = libshl.la
mod_bbulk_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	-module \
	-avoid-version

if BUILD_ENABLE_RENDERER_GLTEX
module_LTLIBRARIES += mod-gltex.la
endif

mod_gltex_la_SOURCES = \
	src/kmscon_module_interface.h \
	src/text_gltex.c \
	src/kmscon_mod_gltex.c
mod_gltex_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(GLES2_CFLAGS)
mod_gltex_la_LIBADD = \
	$(GLES2_LIBS) \
	libshl.la \
	src/text_gltex_atlas.vert.bin.lo \
	src/text_gltex_atlas.frag.bin.lo
mod_gltex_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	-module \
	-avoid-version

if BUILD_ENABLE_RENDERER_PIXMAN
module_LTLIBRARIES += mod-pixman.la
endif

mod_pixman_la_SOURCES = \
	src/kmscon_module_interface.h \
	src/text_pixman.c \
	src/kmscon_mod_pixman.c
mod_pixman_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(PIXMAN_CFLAGS)
mod_pixman_la_LIBADD = \
	$(PIXMAN_LIBS) \
	libshl.la
mod_pixman_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	-module \
	-avoid-version

#
# Binaries
# These are the sources for the main binaries and test programs. They mostly
# consists of a single source file only and include all the libraries that are
# built as part of kmscon.
#

bin_PROGRAMS += kmscon
check_PROGRAMS += \
	test_output \
	test_vt \
	test_input \
	test_key
MANPAGES += docs/man/kmscon.1

kmscon_SOURCES = \
	src/conf.h \
	src/conf.c \
	src/pty.h \
	src/pty.c \
	src/font.h \
	src/font.c \
	src/font_8x16.c \
	src/text.h \
	src/text.c \
	src/text_bblit.c \
	src/kmscon_module_interface.h \
	src/kmscon_module.h \
	src/kmscon_module.c \
	src/kmscon_terminal.h \
	src/kmscon_dummy.h \
	src/kmscon_seat.h \
	src/kmscon_seat.c \
	src/kmscon_conf.h \
	src/kmscon_conf.c \
	src/kmscon_main.c
nodist_kmscon_SOURCES =

kmscon_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(XKBCOMMON_CFLAGS) \
	$(TSM_CFLAGS)
kmscon_LDADD = \
	$(XKBCOMMON_LIBS) \
	$(TSM_LIBS) \
	libeloop.la \
	libuterm.la \
	libshl.la \
	-lpthread \
	-ldl
kmscon_LDFLAGS = \
	$(AM_LDFLAGS) \
	-rdynamic

if BUILD_ENABLE_SESSION_DUMMY
kmscon_SOURCES += src/kmscon_dummy.c
endif

if BUILD_ENABLE_SESSION_TERMINAL
kmscon_SOURCES += src/kmscon_terminal.c
endif

#
# Tests
#

test_sources = \
	src/conf.h \
	src/conf.c \
	tests/test_include.h
test_cflags = \
	$(AM_CPPFLAGS) \
	$(XKBCOMMON_CFLAGS)
test_libs = \
	$(XKBCOMMON_LIBS) \
	libeloop.la \
	libshl.la

test_output_SOURCES = \
	$(test_sources) \
	tests/test_output.c
test_output_CPPFLAGS = $(test_cflags)
test_output_LDADD = \
	$(test_libs) \
	libuterm.la

test_vt_SOURCES = \
	$(test_sources) \
	tests/test_vt.c
test_vt_CPPFLAGS = $(test_cflags)
test_vt_LDADD = \
	$(test_libs) \
	libuterm.la

test_input_SOURCES = \
	$(test_sources) \
	tests/test_input.c
test_input_CPPFLAGS = $(test_cflags)
test_input_LDADD = \
	$(test_libs) \
	libuterm.la

test_key_SOURCES = \
	$(test_sources) \
	tests/test_key.c
test_key_CPPFLAGS = $(test_cflags)
test_key_LDADD = $(test_libs)

#
# Manpages
#

man_MANS =
EXTRA_DIST += ${patsubst %.1,%.xml,${patsubst %.3,%.xml,${patsubst %.5,%.xml,${patsubst %.7,%.xml,$(MANPAGES)}}}}
CLEANFILES += $(MANPAGES) $(MANPAGES_ALIASES) .man_fixup

if BUILD_HAVE_XSLTPROC
if BUILD_HAVE_MANPAGES_STYLESHEET

man_MANS += $(MANPAGES) $(MANPAGES_ALIASES)

XSLTPROC_FLAGS = \
	--stringparam man.authors.section.enabled 0 \
	--stringparam man.copyright.section.enabled 0 \
	--stringparam funcsynopsis.style ansi \
	--stringparam man.output.quietly 1 \
	--nonet

XSLTPROC_PROCESS_MAN = \
	$(AM_V_GEN)$(MKDIR_P) $(dir $@) && \
	$(XSLTPROC) -o "$@" $(XSLTPROC_FLAGS) $(BUILD_MANPAGES_STYLESHEET) "$<" && \
	touch .man_fixup

# Force .man_fixup if $(MANPAGES) are not built
.man_fixup: | $(MANPAGES)
	@touch .man_fixup

$(MANPAGES_ALIASES): $(MANPAGES) .man_fixup
	$(AM_V_GEN)if test -n "$@" ; then $(SED) -i -e 's/^\.so \([a-z_]\+\)\.\([0-9]\)$$/\.so man\2\/\1\.\2/' "$@" ; fi

docs/man/%.1: docs/man/%.xml
	$(XSLTPROC_PROCESS_MAN)

docs/man/%.3: docs/man/%.xml
	$(XSLTPROC_PROCESS_MAN)

docs/man/%.5: docs/man/%.xml
	$(XSLTPROC_PROCESS_MAN)

docs/man/%.7: docs/man/%.xml
	$(XSLTPROC_PROCESS_MAN)

endif # BUILD_HAVE_MANPAGES_STYLESHEET
endif # BUILD_HAVE_XSLTPROC

#
# Phony targets
#

.PHONY: $(TPHONY)

#
# Empty .SECONDARY target causes alle intermediate files to be treated as
# secondary files. That is, they don't get deleted after make finished.
#

.SECONDARY:
